--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar fixed-top {
-    position:fixed !important;
+    position: fixed !important;
 }
 
 .navbar-brand:hover {
@@ -138,13 +138,24 @@ body {
 
 /* --- beans --- */
 
+.ourbeans {
+    position: relative;
+    text-align: center;
+    color: white;
+}
 
+.ourbeansheader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 /* --- media queries --- */
 
 @media (min-width: 768px) {
     .quote-landing {
-     font-size: 2.5rem;   
+        font-size: 2.5rem;
     }
 }
