added cards to landing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,12 @@ body {
 }
 
 
+/* --- cards landing ---*/
+
+.cards-beans {
+    margin-top: 2rem;
+}
+
 /* --- media queries --- */
 
 @media (min-width: 768px) {
