added images for cards in landing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,10 @@ body {
     margin-top: 2rem;
 }
 
+.card2 {
+    margin-top: 2rem;
+}
+
 /* --- media queries --- */
 
 @media (min-width: 768px) {
