--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,27 @@ body {
     
 }
 
+/* --- sca courses ---*/
+
+.sca-section {
+    margin-top: 2rem;
+    margin-top: 20px;
+    background-color: #669966;
+    color: #ffffff;
+}
+
+.sca-img {
+    padding: 0;
+    border: 2px solid;
+    border-radius: 0.25rem;
+    position: relative;
+}
+
+.sca-text {
+    margin-top: 2rem;
+}
+
+    
 /* --- media queries --- */
 
 @media (min-width: 768px) {
