added info to README.md and icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ body {
 
 .bgblack {
     background-color: #000000;
+    padding: 0;
 }
 
 /* --- jumbotron hero image --- */
@@ -171,19 +172,21 @@ body {
 .card1,
 .card2 {
     margin-top: 2rem;
-    border: 2px solid;
-    border-color: #b87333;
-    border-radius: 0.25rem;
+    padding-bottom: 2rem;
 }
 
 .card-header {
-    background-color: #ffffff;
+    background-color: #000000;
     color: #b87333;
-    
+    text-align: center;
 }
 
-.bgwhite {
-    background-color: #ffffff;
+.card-img-top {
+    max-height: 50%;
+}
+
+.btn-light {
+    background-color: #b87333;
 }
 
 /* --- sca courses --- */
@@ -220,9 +223,27 @@ body {
     padding: 0.4rem;
 }
 
-#methods {
+
+/* --- link to page/downloadable pdfs ---*/
+
+.brew-cards {
     margin-top: 2rem;
 }
+
+
+.card-group img {
+    width: 100px;
+    height: 100px;
+    transform: translateX(90%);
+}
+
+
+
+/* --- courses.html --- */
+
+
+
+
 
 /* --- media queries --- */
 
