--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,7 +252,20 @@ body {
 /* --- courses.html --- */
 
 
+/* --- coffees.html --- */
 
+.coffees-container {
+    margin-top: 210px;
+}
+
+.progress {
+    width: 200px;
+    margin: 10px;
+}
+
+.progress-type {
+   margin-left: 5px;
+}
 
 
 /* --- footer --- */
