--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Montserrat", sans-serif;
 }
 
 /* --- navbar --- */
@@ -199,6 +200,10 @@ body {
     border: none;
 }
 
+.landing-button {
+    background-color: red;
+}
+
 /* --- landing sca courses --- */
 
 .sca-section {
@@ -238,25 +243,20 @@ body {
     margin-top: 10px;
 }
 
-/* --- landing courses.html --- */
+/* --- intro.html --- */
 
-.courses-container {
-    margin-top: 210px;
+.intro-content {
+    margin: 2rem;
+    border: 2px solid #b87333;
+    border-radius: 0.25rem;
+    padding: 1rem;
 }
 
-/* --- coffees-single html --- */
-
-.coffees-container {
-    margin-top: 210px;
+.intro-form {
+    background-color: #669966;
+    font-family: "Lato", sans-serif;
+    font-size: 2rem;
 }
-
-
-/* --- coffees-blends.html --- */
-
-.blends-container {
-    margin-top: 200px;
-}
-
 
 /* --- footer --- */
 
