--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ body {
     text-align: center;
 }
 
-.jumbotron-divider {
+.section-divider {
     background-color: #b87333;
     margin: 1.5rem;
 }
@@ -288,7 +288,6 @@ body {
     background-color: #669966;
     border: 1px solid #669966;
     border-radius: 0.25rem;
-    font-family: "Montserrat", sans-serif;
 }
 
 .brewing-container h2 {
