--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
 
 .main-container {
     margin-top: 180px;
+    padding: 0;
 }
 
 .section-divider {
@@ -307,8 +308,6 @@ h1 {
 
 .sca-content {
     margin: 2rem;
-    border: 2px solid #669966;
-    border-radius: 0.25rem;
     padding: 1rem;
 }
 
